--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@
     color: #0C3B2E !important;
 }
 
+.black {
+    color: black
+}
+
 .second-way {
     color: #F2F2F2;
 }
@@ -12,6 +16,10 @@
 
 .bg-second-way {
     background-color: #F2F2F2;
+}
+
+.bg-last-way {
+    background-color: #D43900;
 }
 
 .main-font {
@@ -31,7 +39,18 @@ a {
 }
 
 
-.this {
-    transition: padding-top 2s;
- 
+
+
+.btn-style {
+    background-color: transparent;
+    padding: 0;
+    border: none;
+
+}
+.a-btn-style {
+    cursor: pointer;
+    font-size: 1.2em;
+    color: white;
+    text-align: start;
+    width: auto;
 }
