--- a/client/src/pages/projects.css
+++ b/client/src/pages/projects.css
@@ -66,6 +66,7 @@
 
 .title-page {
     margin-left: 8px;
+    width: 100%;
 }
 
 /* -------------------------------------------------------------------------- */
