--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -2,10 +2,26 @@
 /*                                   Nav Bar                                  */
 /* -------------------------------------------------------------------------- */
 
+.menu-ul {
+
+    gap: 30px;
+}
+
+.menu-ul ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+.menu-ul li {
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
+}
+
 .burger {
     position: relative;
-    width: 40px;
-    height: 30px;
     background: transparent;
     cursor: pointer;
     display: block;
@@ -57,8 +73,8 @@
 
 .burger input:checked~span:nth-of-type(3) {
     transform: rotate(-45deg);
-    top: 28px;
-    left: 5px;
+    top: 22px;
+    left: 4px;
 }
 
 .navbar {
@@ -112,6 +128,9 @@
 /* -------------------------------------------------------------------------- */
 /*                                Footer                                      */
 /* -------------------------------------------------------------------------- */
+.footer-h {
+    height: 100dvh;
+}
 
 .nav-footer div:nth-child(5) {
 
@@ -146,6 +165,18 @@
 
 }
 
+@media only screen and (max-width: 768px) {
+
+    .font {
+        font-size: 1.5rem;
+    }
+
+    .burger {
+        width: 30px;
+        height: 25px;
+    }
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
 
     .absolute {
@@ -164,5 +195,6 @@
         top: 100px;
         right: 30px;
     }
+
 
 }
