--- a/client/src/pages/courses.css
+++ b/client/src/pages/courses.css
@@ -223,3 +223,15 @@
         font-size: 35px;
     }
 }
+
+
+@media only screen and (max-width: 768px) {
+
+    .font-size-courses{
+        font-size: 25px;
+        font-weight: 700;
+        
+    }
+
+
+}
