--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -159,7 +159,7 @@
     .absolute {
         display: block;
         position: absolute;
-        top: 81vh;
+        top: 83.5dvh;
         right: 2.7em;
     }
 
