--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -131,7 +131,7 @@
 
 .footer-page {
     width: '100%';
-    scroll-snap-align: start;
+    scroll-snap-align: end;
     scroll-snap-stop: always;
     background-color: rgb(212, 57, 0);
     color: white;
@@ -175,7 +175,7 @@
     .absolute {
         display: block;
         position: absolute;
-        top: 83.5dvh;
+        top: 81.5dvh;
         right: 2.7em;
     }
 
@@ -193,13 +193,13 @@
     }
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) {
 
     .absolute {
         display: block;
         position: absolute;
         top: 82vh;
-        right: 5em;
+        right: 2.8em;
     }
 
 }
