--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 #page {
     position: relative;
     overflow-y: scroll;
@@ -5,8 +10,6 @@
     scroll-snap-type: y mandatory;
     width: 100%;
     height: 100dvh;
-
-
 }
 
 #page>* {
@@ -19,8 +22,6 @@
 
 @keyframes slideDown {
 
-
-
     to {
         scale: 1;
 
@@ -29,8 +30,6 @@
 
 
 @keyframes firstComponent {
-
-
 
     to {
         scale: 0.6;
