--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -2,11 +2,6 @@
 /*                                   Nav Bar                                  */
 /* -------------------------------------------------------------------------- */
 
-.menu-ul {
-
-    gap: 30px;
-}
-
 .menu-ul ul {
     list-style: none;
     margin: 0;
@@ -82,16 +77,15 @@
     z-index: 400;
 }
 
-.font {
+.special-font {
     font-family: 'Dancing Script', cursive;
-    font-size: 2rem;
 
 }
 
 .set-collapse {
     position: absolute;
-    top: 70px;
-    right: 25px;
+    top: 50px;
+    right: 0px;
 }
 
 .line-nav {
@@ -188,8 +182,8 @@
     }
 
     .burger {
-        width: 30px;
-        height: 25px;
+        width: 29px;
+        height: 22px;
     }
 }
 
