--- a/client/src/pages/courses.css
+++ b/client/src/pages/courses.css
@@ -21,10 +21,43 @@
 /*                                    Card                                    */
 /* -------------------------------------------------------------------------- */
 
+.card {
+    transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.card .card-section {
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px #000000;
+
+}
+
+.show-more {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #f2f2f2;
+    transform: rotateX(-90deg);
+    transform-origin: bottom;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 
 
+.card:hover .show-more {
 
+    transform: rotateX(0deg);
+}
 
+.card:hover.card-section {
+    scale: 0;
+}
 
 .card-border-courses {
 
@@ -47,52 +80,6 @@
     justify-content: space-evenly;
     flex-direction: column;
 
-}
-
-
-.school {
-
-    margin: 0;
-    max-width: fit-content;
-    padding: 12px;
-    border: 1px solid black;
-    background-color: orange;
-    border-radius: 10px;
-    letter-spacing: 1px;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.4s;
-
-
-}
-
-
-
-
-.content-card-courses {
-    text-align: start;
-    line-height: 1.5;
-    font-size: 13.5px;
-    font-weight: 500;
-    margin-bottom: 0px;
-    text-indent: 3px;
-}
-
-.title-course {
-    margin: 5px;
-    font-size: 14px;
-    font-weight: 900;
-}
-
-.teck ul {
-    margin-left: 15px;
-    list-style:outside;
-    line-height: 1.9;
-}
-
-.columns-courses:hover .btn {
-    box-shadow: 2px 2px 0 1px rgba(0, 0, 0);
 }
 
 
@@ -123,7 +110,6 @@
 
 }
 
-
 @media only screen and (min-height: 1200px) {
 
     .card-body-courses {
@@ -131,123 +117,6 @@
 
     }
 
-
-
-}
-
-/* -------------------------------------END---------------------------------- */
-
-@media only screen and (min-width: 576px) and (max-width: 768px) {
-
-    .carousel-set-next {
-        right: -45px;
-    }
-
-    .carousel-set-prev {
-        left: -45px;
-    }
-
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
-
-    .crs {
-
-        width: 685px;
-    }
-
-    .columns-courses {
-
-        height: 450px;
-        width: 340px;
-    }
-
-    .columns-courses .container-course {
-
-        margin-bottom: 0px;
-    }
-
-
-    .teck {
-        font-size: 14px;
-        margin-top: 10px;
-    }
-
-    .teck ul {
-        line-height: 1.4;
-    }
-
-    .crsl-btn-md {
-        width: 10%;
-    }
-
-    .carousel-set-next {
-        right: -55px;
-    }
-
-    .carousel-set-prev {
-        left: -55px;
-    }
-
-
-    .font-size-courses {
-
-        font-size: 30px;
-    }
-
-}
-
-@media only screen and (min-width: 1200px) {
-
-    .columns-courses {
-        height: 430px;
-        width: 100%;
-        padding: 15px;
-    }
-
-    .columns-courses .container-course {
-        margin-bottom: 0px;
-    }
-
-    .container-course p {
-        margin: 0px;
-    }
-
-
-
-    .title-course {
-        font-size: 15px;
-    }
-
-    .description-course {
-        margin: 10px 0px 0px 0px;
-        line-height: 1.4;
-        font-size: 13px;
-    }
-
-    .teck {
-        font-size: 13px;
-        margin-top: 10px;
-    }
-
-    .teck ul {
-        line-height: 1.6;
-    }
-
-    .font-size-courses {
-
-        font-size: 35px;
-    }
-}
-
-
-@media only screen and (max-width: 768px) {
-
-    .font-size-courses {
-        font-size: 25px;
-        font-weight: 700;
-
-    }
 
 
 }
