--- a/client/src/pages/courses.css
+++ b/client/src/pages/courses.css
@@ -22,6 +22,7 @@
 /* -------------------------------------------------------------------------- */
 
 .card {
+    background-color: #f2f2f2;
     transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
@@ -63,8 +64,8 @@
 
     position: relative;
     border-radius: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
     border: 2px solid black;
     transition: all 0.4s;
 }
