--- a/client/public/main.css
+++ b/client/public/main.css
@@ -35,7 +35,7 @@
   }
 
 .text-color-principal {
-    color: #0C3B2E;
+    color: #2c2c2c;
 }
 
 .text-white {
@@ -46,7 +46,7 @@
 }
 
 .bg-color-principal {
-    background-color: #0C3B2E;
+    background-color: #2c2c2c;
 }
 
 .bg-light {
